# matter

./: .gitmodules
examples/bridge-app/nxp/imx/: BUILD.gn  main.cpp
examples/bridge-app/nxp/imx/k32w-zcb/IotCommon/: fileCreate.c  newDb.c  newDb.h
examples/bridge-app/nxp/imx/k32w-zcb/ZCB/: SerialLink.c  ZigbeeDevices.c  cmd.c  cmd.h  zcb.c  zcb.h  zcb_main.c  zcb_main.h
examples/bridge-app/nxp/linux-imx/: BUILD.gn  main.cpp
examples/bridge-app/nxp/linux-imx/main/include/: Bridge.h  BridgeActions.h  BridgeConfig.h  BridgeMgr.h  Device.h  ZcbMessage.h
examples/bridge-app/nxp/linux-imx/main/libzcb/IotCommon/: newDb.c  newDb.h  newLog.h
examples/bridge-app/nxp/linux-imx/main/libzcb/ZCB/: CMakeLists.txt  Serial.c  SerialLink.c  SerialLink.h  Utils.h  cmd.c  cmd.h  zcb.c  zcb.h  zcb_main.c  zcb_main.h
examples/bridge-app/nxp/linux-imx/main/src/: Bridge.cpp  BridgeActions.cpp  BridgeMgr.cpp  Device.cpp
examples/light-switch-app/nxp/k32w/k32w0/: BUILD.gn
examples/light-switch-app/nxp/k32w/k32w0/include/: CHIPProjectConfig.h
examples/light-switch-app/nxp/k32w/k32w0/main/: AppTask.cpp
examples/light-switch-app/nxp/k32w/k32w0/main/include/: AppTask.h
scripts/tools/: zap_regen_all.py
